[tool.poetry]
name = "nntd"
version = "0.1.0"
description = ""
authors = ["Misha Wagner <mishajw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.30"
jaxtyping = "^0.2.31"
plotly = "^5.22.0"
pandas = "^2.2.2"
nbformat = "^5.10.4"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
